nanousd-properties.h


NANOUSD_API
nusd_result_t nusd_attribute_set_bool_array(nusd_stage_t stage, char const* attribute_path, bool* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_matrix2d(nusd_stage_t stage, char const* attribute_path, double* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_matrix2d_array(nusd_stage_t stage, char const* attribute_path, double* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_matrix3d(nusd_stage_t stage, char const* attribute_path, double* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_matrix3d_array(nusd_stage_t stage, char const* attribute_path, double* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_matrix4d(nusd_stage_t stage, char const* attribute_path, double* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_matrix4d_array(nusd_stage_t stage, char const* attribute_path, double* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_get_uint(nusd_stage_t stage, char const* attribute_path, double time_code, unsigned int* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_uint_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_uint_array_t* uint_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_uint64(nusd_stage_t stage, char const* attribute_path, double time_code, uint64_t* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_uint64_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_uint64_array_t* uint64_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_uchar(nusd_stage_t stage, char const* attribute_path, double time_code, unsigned char* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_uchar_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_uchar_array_t* uchar_array);
NANOUSD_API
nusd_result_t nusd_attribute_set_uint(nusd_stage_t stage, char const* attribute_path, unsigned int value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_uint_array(nusd_stage_t stage, char const* attribute_path, unsigned int* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_uint64(nusd_stage_t stage, char const* attribute_path, uint64_t value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_uint64_array(nusd_stage_t stage, char const* attribute_path, uint64_t* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_uchar(nusd_stage_t stage, char const* attribute_path, unsigned char value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_uchar_array(nusd_stage_t stage, char const* attribute_path, unsigned char* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_token(nusd_stage_t stage, char const* attribute_path, char const* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_token_array(nusd_stage_t stage, char const* attribute_path, char const** value, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_relationship_get_targets(nusd_stage_t stage, char const* relationship_path, nusd_relationship_targets_iterator_t* targets, size_t* num_targets);
NANOUSD_API
nusd_result_t nusd_attribute_get_asset(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_asset_path_t* asset_path);
NANOUSD_API
nusd_result_t nusd_attribute_get_asset_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_asset_path_array_iterator_t* asset_path_array);
NANOUSD_API
nusd_result_t nusd_attribute_set_asset(nusd_stage_t stage, char const* attribute_path, char const* asset_path, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_asset_array(nusd_stage_t stage, char const* attribute_path, char const** asset_path_array, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_color_space(nusd_stage_t stage, char const* attribute_path, nusd_colorspace_t color_space);
NANOUSD_API
nusd_result_t nusd_attribute_get_color_space(nusd_stage_t stage, char const* attribute_path, nusd_colorspace_t* color_space);