libnanousd/nanousd-array.h

typedef struct nusd_uint_array_s* nusd_uint_array_t;
typedef struct nusd_uint64_array_s* nusd_uint64_array_t;
typedef struct nusd_uchar_array_s* nusd_uchar_array_t;