nanousd-iterators.h

typedef struct nusd_relationship_targets_iterator_s* nusd_relationship_targets_iterator_t;
typedef struct nusd_asset_path_array_iterator_s* nusd_asset_path_array_iterator_t;